apply validation on digital menu

--- a/src/App.css
+++ b/src/App.css
@@ -6553,3 +6553,6 @@ select:focus-visible {
 .pppp div:last-child {
   padding-right: 0 !important;
 }
+.errormessage{
+  font-size: 14px !important;
+}
