--- a/src/App.css
+++ b/src/App.css
@@ -7178,7 +7178,7 @@ select:focus-visible {
 
 @media (max-width: 400px) {
   .j-table-position {
-      width: 175px;
+    width: 175px;
   }
 }
 
@@ -7336,9 +7336,9 @@ select:focus-visible {
     justify-content: start;
   }
 
-  .j_Table_price_quantity {
+  /* .j_Table_price_quantity {
     justify-content: end;
-  }
+  } */
 }
 
 @media(max-width:320px) {
@@ -7438,7 +7438,7 @@ select:focus-visible {
   }
 
   .j-counter-menu {
-    width: 57%;
+    width: 63%;
   }
 }
 
@@ -8483,10 +8483,80 @@ select:focus-visible {
   overflow-y: auto;
   transition: height 0.3s ease;
 }
-.errormessage{
-  font-size:14px;
-}
-.m_loginpop .modal-content{
-  width:500px !important;
 
+.errormessage {
+  font-size: 14px;
+}
+
+.m_loginpop .modal-content {
+  width: 500px !important;
+}
+
+.j_check_white {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.j_check_white:checked {
+  background-color: #000;
+  border-color: #000;
+}
+
+.j_check_white:checked::after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  width: 6px;
+  height: 11px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(41deg);
+}
+
+
+/* ============ 05-08-2024 ============= */
+.j_Table_canvas_Time {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media(max-width:1440px) {
+  .j-counter-order-img h4 {
+    margin-right: 25px;
+  }
+}
+
+@media(max-width:425px) {
+  .j-counter-order-img h4 {
+    margin: 0 25px;
+  }
+}
+
+@media(max-width:375px) {
+  .j_Table_canvas_Time {
+    display: block;
+  }
+
+  .j_date_time {
+    margin-top: 5px;
+    margin-left: 12px;
+  }
+
+  .j_canvas_date_time {
+    margin-top: 5px;
+  }
+
+  .j_canvas_table_date {
+    display: block;
+  }
 }
