--- a/src/App.css
+++ b/src/App.css
@@ -8626,3 +8626,8 @@ input[type="search"]::-webkit-search-cancel-button {
     margin: 0 10px;
   }
 }
+
+.m_tabs.nav-tabs .nav-link {
+  border:none !important;
+  border-bottom: 1px solid #9ca3af !important;
+}
