--- a/src/App.css
+++ b/src/App.css
@@ -1333,15 +1333,22 @@ td {
   color: white !important;
   border: none !important;
 }
-
+/* 
 .btn-check:checked+.btn,
 .btn.active,
 .btn.show,
 .btn:first-child:active,
 :not(.btn-check)+.btn:active {
   border: none !important;
+} */
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check)+.btn:active {
+  border: 1px solid transparent !important;
+  /* / border: none !important; / */
 }
-
 input[placeholder],
 [placeholder],
 *[placeholder] {
