--- a/src/App.css
+++ b/src/App.css
@@ -8638,3 +8638,6 @@ input[type="search"]::-webkit-search-cancel-button {
   border:none !important;
   border-bottom: 1px solid #9ca3af !important;
 }
+.m_user .modal-dialog{
+  max-width:700px;
+}
