--- a/src/App.css
+++ b/src/App.css
@@ -8641,3 +8641,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .m_user .modal-dialog{
   max-width:700px;
 }
+
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+  border: none !important;
+}
